# ai-vfs

./: .copier-answers.yaml  .gitignore  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  alembic.ini  conftest.py  flake.nix  pyproject.toml
.specs/: NORTH-STAR.md  ai-vfs-bloom-provider-design.md  ai-vfs-design-doc.md
.specs/changes/2026-06-27-audit-copy-move-execute/: design.md  proposal.md  tasks.md
.specs/changes/2026-06-28-sandbox-fs-mount/: design.md  proposal.md  tasks.md
.specs/changes/2026-06-30-anchored-editing/: notes-on-anchors.md  proposal.md
.specs/changes/2026-07-18-posix-filesystem-semantics/: proposal.md
.specs/changes/archive/: ai-vfs-bloom-provider-design.md
.specs/changes/fulltext-match-modes/: design.md  proposal.md  tasks.md
.specs/changes/object-store-text-index/: design.md  proposal.md  tasks.md
.specs/changes/phase1-core/: design.md  proposal.md  tasks.md
.specs/changes/phase2-adapters/: proposal.md
.specs/changes/phase2-search/: design.md  proposal.md  tasks.md
.specs/changes/phase2-storage/: design.md  tasks.md
.specs/changes/phase3-execution/: design.md  proposal.md  tasks.md
.specs/changes/search-realignment/: design.md  proposal.md  tasks.md
.specs/changes/shell-context/: design.md  proposal.md  tasks.md
.specs/specs/access-control/: spec.md
.specs/specs/execution/: spec.md
.specs/specs/file-operations/: spec.md
.specs/specs/observability/: spec.md
.specs/specs/search/: spec.md
.specs/specs/session/: spec.md
.specs/specs/storage/: spec.md
.specs/specs/versioning/: spec.md
demo/: .gitignore  README.md  __init__.py
demo/backend/: __init__.py  __main__.py  agent.py  app.py  config.py  extract.py  history.py  introspect.py  model_info.py  tracing.py  vfs_setup.py
demo/frontend/: index.html  package.json  vite.config.ts
demo/frontend/src/: App.tsx  Thread.tsx  ThreadList.tsx  VfsInspector.tsx  index.css  main.tsx
demo/tests/: test_demo_backend.py
docs/: docat-handoff.md
docs/research/: backend-provider-fit.md  bashkit-tigerfs-convo.md  design-brainstorm-convo.md  fsspec and tigerfs research.md  in-process sandboxed execution for multitenant code.md  monty tigerfs readme.md  project-landscape-survey.md  sandboxed-execution-research-convo.md  tigerfs-sandbox-demos.md  vfs memo.md  vfs-landscape-and-fit.md  vfs-memo.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_search_text_artifacts.py
notebooks/: .gitignore  01_vfs_tour.py  02_remote_backends.py  03_pydantic_ai_codemode.py  README.md  docker-compose.yaml  dogfood.py  langgraph_smoke.py
scripts/: integration-tests.sh
src/vfs/: __init__.py  config.py  errors.py  gc.py  models.py  session.py  vfs.py
src/vfs/anchored_editing/: __init__.py  anchors.py  editor.py
src/vfs/execution/: __init__.py  anchors.py  fs_ops.py  fs_port.py  just_bash_provider.py  monty_os.py  monty_provider.py  registry.py
src/vfs/observability/: audit.py  tracing.py
src/vfs/protocols/: blob.py  execution.py  fs_port.py  metadata.py  search.py
src/vfs/search/: _regex.py  default.py  reader.py
src/vfs/stores/: cached_blob.py  local_blob.py  mongo_metadata.py  postgres_metadata.py  s3_blob.py  schema.py  sql_metadata.py  sqlite_metadata.py
tests/: conftest.py  test_pypi_security_audit.py  test_uv_security_audit.py
tests/integration/: README.md  conftest.py  docker-compose.yaml  test_boundary_hardening.py  test_mongo_metadata.py  test_postgres_metadata.py  test_s3_blob.py  test_session_operations.py  test_tier_retention.py  test_vfs_access_control.py  test_vfs_file_operations.py  test_vfs_search.py  test_vfs_versioning.py
tests/unit/: test_anchored_editing.py  test_boundary_hardening.py  test_cached_blob.py  test_cold_index_reindex.py  test_config.py  test_consumer_samples.py  test_default_search.py  test_demo_backend.py  test_execute.py  test_execution_protocol.py  test_execution_registry.py  test_fs_ops.py  test_fs_port.py  test_gc.py  test_just_bash_provider.py  test_local_blob.py  test_migrations.py  test_models.py  test_monty_mount.py  test_monty_provider.py  test_native_text_search.py  test_observability.py  test_postgres_fulltext_tsquery.py  test_regex_engine.py  test_search_dispatch.py  test_search_envelope.py  test_search_reader.py  test_session.py  test_sqlite_metadata.py  test_vfs_uri_resolution.py
(+70 files in other folders)
