[build-system]
requires = ["uv_build>=0.11"]
build-backend = "uv_build"

[project]
name = "ai-vfs"
description = "AI-first virtual file system"
version = "0.0.1"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.15"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.13.0",
    "blake3>=1.0.8",
    "diskcache>=5.6.3",
    "google-re2>=1.1.20251105",
    "opentelemetry-api>=1.40.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-ulid>=3.1.0",
    "setproctitle>=1.3.7",
    "sqlalchemy[asyncio]>=2.0.30",
]

[project.optional-dependencies]
# Production storage adapters. Each extra adds only its async driver on top of the
# SQLAlchemy Core base; the adapters resolve lazily by URI scheme (see vfs.vfs).
postgres = ["asyncpg>=0.30.0"]
mongo = ["motor>=3.6.0"]
s3 = ["aiobotocore>=2.15.0"]

# Execution providers (code-mode sandboxes). Optional — the VFS layer runs standalone;
# providers resolve lazily by name (see vfs.execution.registry) and a missing extra raises
# an actionable install hint. `codemode` is the umbrella over every sandbox.
monty = ["pydantic-monty>=0.0.18"]
just-bash = ["just-bash>=0.2.1"]
codemode = ["ai-vfs[monty,just-bash]", "pydantic-ai-harness[code-mode]>=0.7.0"]

[dependency-groups]
# for local development groups;
# not exposed to user-facing install api
# e.g., cannot do `uv add aifs[dev]`
dev = [
    "defusedxml>=0.7.1",
    "fastapi>=0.138.0",
    "liteparse>=2.4.0",
    "mlflow>=3.6.0,<3.14.0",
    "openpyxl>=3.1.5",
    "opentelemetry-exporter-otlp-proto-http>=1.40.0",
    "pydantic-ai>=2.1",
    "uv-ship>=0.3.0",
    "uvicorn>=0.49.0",
]
docs = [
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.6.0",
    "mkdocstrings[python]>=0.29.0",
]
lint = [
    "complexipy>=3.0.0",
    "ruff>=0.12.0",
]
test = [
    "coverage>=7.6.9",
    "hypothesis>=6.100",
    "opentelemetry-sdk>=1.40.0",
    "pip-audit>=2.10.0",
    "pyleak>=0.2.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6",
    "pytest-dependency~=0.6",
    "pytest-isolate>=0.0.13",
    "pytest-responses>=0.5.1",
    "pytest-subprocess>=1.5.3",
    "pytest-xdist>=3.8.0",
    "responses>=0.25.3",
]
type = [
    "pandas-stubs~=2.1",
    "types-openpyxl~=3.1",
    "types-requests~=2.31",
    "boto3-stubs~=1.37",
    "types-urllib3~=1.26",
    "types-tqdm~=4.67",
]
ipynb = [
    "ipykernel~=6.29",
    "ipywidgets~=8.1",
    "nest-asyncio>=1.6",
    "notebook>=7.2.2",
]
plot = [
    "cmcrameri>=1.9",
    "matplotlib>=3.8",
    "mizani>=0.13",
    "plotly>=5.24",
    "plotnine>=0.14",
    "seaborn>=0.13",
]

[tool.uv]
package = true
default-groups = [ "dev", "ipynb", "lint", "test", "type" ]
python-preference = "managed"
exclude-newer = "3 days"

[tool.uv.build-backend]
module-name = "vfs"
module-root = "src/"

[tool.uv.pip]
prerelease = "if-necessary-or-explicit"

# [tool.ty]

[tool.pytest.ini_options]
addopts = '''
    -ra
    -m 'not isolate'
    --strict-markers
    --ignore=docs/conf.py
    --ignore=setup.py
    --ignore=ci
    --ignore=.eggs
    --ignore-glob=.env*
    --ignore-glob=.envrc
    --import-mode=importlib
    --tb=short
'''
# --doctest-modules
# --doctest-glob=\*.rst
norecursedirs = [
  ".env",
  ".env.*",
  ".envrc",
  ".git",
  ".hypothesis",
  ".nox",
  ".pytest_cache",
  ".tox",
  "__pycache__",
  "dist",
  "docs",
  "build",
  "migrations",
  "notebooks",
  "writeup",
]
python_files = [ "test_*.py", "*_test.py", "tests.py" ]
pythonpath = [ "src", "." ]
testpaths = [ "tests", "demo/tests" ]
# log_cli = true
markers = [
    "isolate: run test in isolated subprocess (requires pytest-isolate)",
]

[tool.coverage.paths]
source = [ "src", "*/site-packages" ]

[tool.coverage.run]
branch = true
source = [ "src" ]

[tool.coverage.report]
show_missing = true

[tool.uv-ship]
release-branch = "main"
tag-prefix = "v"
allow-dirty = false
changelog-path = "CHANGELOG"
changelog-template = "- {message} [{hash}]"
commit-message = "bump: {old_ver} → {new_ver}"
